AC_PREREQ([2.71])

m4_define([VERSION_MAJOR], [1])
m4_define([VERSION_MINOR], [1])
m4_define([VERSION_PATCH], [3])

AC_INIT([libaec],[VERSION_MAJOR.VERSION_MINOR.VERSION_PATCH],[rosenhauer@dkrz.de])

AC_SUBST(PROJECT_VERSION_MAJOR, [VERSION_MAJOR])
AC_SUBST(PROJECT_VERSION_MINOR, [VERSION_MINOR])
AC_SUBST(PROJECT_VERSION_PATCH, [VERSION_PATCH])

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_SRCDIR([src/decode.c])
AC_CONFIG_HEADERS(config/config.h)

LT_INIT
gl_VISIBILITY
AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE([enable])

AC_PROG_CC

AC_C_BIGENDIAN
AC_C_INLINE
AC_TYPE_INT64_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T
AC_C_INLINE
AC_C_RESTRICT

AC_CHECK_FUNCS([memset strstr snprintf])
AC_CHECK_DECLS(__builtin_clzll)

AM_EXTRA_RECURSIVE_TARGETS([bench benc bdec])

AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile include/libaec.h])
AC_OUTPUT
